security /strict-mtls.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: mesh-peer-auth
  namespace: istio-system
spec:
  mtls:
    mode: STRICT
