security /authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: microservices-auth-policy
  namespace: microservices
spec:
  rules:
    - from:
        - source:
            principals: ["cluster.local/ns/microservices/sa/default"]
